# CryptoQuantPaltform001

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: backtest.yaml  base.yaml  live.yaml  paper.yaml
dashboard/: package.json
docs/: ARCHITECTURE.md  ARCHITECTURE_NOTES.md  DASHBOARD_GUIDE.md  DEVELOPMENT_GUIDE.md  INTERFACES.md  TRADING_SAFETY.md
scripts/data/: __init__.py  download_history.py
src/cq/: __init__.py
src/cq/api/: __init__.py
src/cq/backtest/: __init__.py
src/cq/config/: __init__.py  loader.py  schema.py  validation.py
src/cq/data/: __init__.py  validation.py
src/cq/domain/: __init__.py  _validation.py  account.py  enums.py  market.py  order.py  signal.py
src/cq/execution/: __init__.py
src/cq/features/: __init__.py  returns.py
src/cq/monitoring/: __init__.py
src/cq/portfolio/: __init__.py
src/cq/ports/: __init__.py  broker.py  clock.py  exchange.py  execution_models.py  market_data.py  notifier.py  risk.py  storage.py  strategy.py
src/cq/risk/: __init__.py
src/cq/storage/: __init__.py
tests/fixtures/: exchange_info.json  klines_sample.json
tests/integration/: test_binance_history_to_storage.py  test_binance_network_optional.py  test_download_history_script.py  test_p1_p3_vertical_slice.py
tests/unit/: test_import.py
tests/unit/config/: test_config_import_boundaries.py  test_loader.py  test_schema.py  test_validation.py
tests/unit/data/: test_data_import_boundaries.py  test_data_validation.py
tests/unit/domain/: helpers.py  test_account.py  test_enums.py  test_market.py  (+3 more)
(+17 files in other folders)
